--- a/BudgetApp/appsettings.json
+++ b/BudgetApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "ConnectionString": "User ID=budget-app;Password=budget-app;Host=localhost;Port=5432;Database=budget-app"
+  }
 }
