--- a/BudgetApp.Data/BudgetApp.Data.csproj
+++ b/BudgetApp.Data/BudgetApp.Data.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.123" />
+      <PackageReference Include="Dapper.FluentMap.Dommel" Version="2.0.0" />
       <PackageReference Include="Npgsql" Version="7.0.1" />
     </ItemGroup>
 
