basic auth added, login/register created

--- a/BudgetApp.Models/BudgetApp.Models.csproj
+++ b/BudgetApp.Models/BudgetApp.Models.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BudgetApp.Data\BudgetApp.Data.csproj" />
+      <ProjectReference Include="..\BudgetApp.Domain\BudgetApp.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
