--- a/BudgetApp/appsettings.json
+++ b/BudgetApp/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "ConnectionString": "User ID=budget-app;Password=budget-app;Host=localhost;Port=5432;Database=budget-app"
+    "ConnectionString": "User ID=budget-app;Password=budget-app;Host=localhost;Port=5432;Database=budget-app",
+    "TokenIssuer": "E4D4E6FC-042D-4B38-9EF9-12DCBFC074BF",
+    "TokenSigningKey": "0dae3fd2c5dd43079266db2aca72d2de4dsf"
   }
 }
