--- a/BudgetApp.Domain/BudgetApp.Domain.csproj
+++ b/BudgetApp.Domain/BudgetApp.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="Dapper.FluentMap.Dommel" Version="2.0.0" />
+      <PackageReference Include="Npgsql" Version="7.0.1" />
     </ItemGroup>
 
 </Project>
