--- a/BudgetApp.Core/BudgetApp.Core.csproj
+++ b/BudgetApp.Core/BudgetApp.Core.csproj
@@ -12,6 +12,9 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt-Core" Version="2.0.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="6.0.14" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.14" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
     </ItemGroup>
 
