--- a/BudgetApp/BudgetApp.csproj
+++ b/BudgetApp/BudgetApp.csproj
@@ -9,8 +9,10 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12" />
+      <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.14" />
       <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.25.1" />
       <PackageReference Include="Npgsql" Version="7.0.1" />
+      <PackageReference Include="Radzen.Blazor" Version="4.7.9" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
