--- a/BudgetApp.Application/BudgetApp.Application.csproj
+++ b/BudgetApp.Application/BudgetApp.Application.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="BCrypt-Core" Version="2.0.0" />
+      <PackageReference Include="CsvHelper" Version="30.0.1" />
       <PackageReference Include="MediatR" Version="12.0.1" />
       <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
@@ -25,6 +26,12 @@
     <ItemGroup>
       <Folder Include="Features\Transactions\Helpers" />
       <Folder Include="Features\Users\Queries" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.AspNetCore.Components.Web">
+        <HintPath>..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\6.0.13\Microsoft.AspNetCore.Components.Web.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
