--- a/BudgetApp/BudgetApp.csproj
+++ b/BudgetApp/BudgetApp.csproj
@@ -2,29 +2,16 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="AutoMapper" Version="12.0.1" />
-      <PackageReference Include="Dapper" Version="2.0.123" />
-      <PackageReference Include="MediatR" Version="12.0.1" />
-      <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
-      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.12" />
-      <PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="6.0.14" />
-      <PackageReference Include="Microsoft.IdentityModel.Protocols.OpenIdConnect" Version="6.25.1" />
-      <PackageReference Include="Npgsql" Version="7.0.1" />
-      <PackageReference Include="Radzen.Blazor" Version="4.7.9" />
-      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\BudgetApp.Application\BudgetApp.Application.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <AdditionalFiles Include="Pages\Components\BankAccounts\BankAccountsSummary.razor" />
+      <Folder Include="Controllers" />
     </ItemGroup>
 
 </Project>
