--- a/BudgetApp/BudgetApp.csproj
+++ b/BudgetApp/BudgetApp.csproj
@@ -7,11 +7,18 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="MediatR" Version="12.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BudgetApp.Application\BudgetApp.Application.csproj" />
+      <ProjectReference Include="..\BudgetApp.Domain\BudgetApp.Domain.csproj" />
     </ItemGroup>
 
 </Project>
