--- a/BudgetApp.Domain/BudgetApp.Domain.csproj
+++ b/BudgetApp.Domain/BudgetApp.Domain.csproj
@@ -11,4 +11,8 @@
       <PackageReference Include="Npgsql" Version="7.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\BudgetApp.Domain.Common\BudgetApp.Domain.Common.csproj" />
+    </ItemGroup>
+
 </Project>
