--- a/BudgetApp.WebApi/appsettings.json
+++ b/BudgetApp.WebApi/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "ConnectionString": "User ID=budget-app;Password=budget-app;Host=localhost;Port=5432;Database=budget-app",
+    "ConnectionString": "User ID=postgres;Password=root;Host=localhost;Port=5432;Database=budget-app",
     "TokenIssuer": "E4D4E6FC-042D-4B38-9EF9-12DCBFC074BF",
     "TokenSigningKey": "0dae3fd2c5dd43079266db2aca72d2de4dsf"
   }
